# daari

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autodev.yml  ci.yml  docker.yml  docs-site.yml  publish.yml
Formula/: daari.rb
daari/: __init__.py  __main__.py
daari/auth/: __init__.py  virtual_keys.py
daari/cache/: command_context.py  exact.py  normalize.py  redis_exact.py  semantic.py
daari/cli/: app.py  setup_actions.py
daari/clients/: __init__.py  base.py  registry.py
daari/config/: defaults.yaml  project.py  settings.py
daari/enterprise/: __init__.py  audit.py  bootstrap.py  cache.py  client.py  config.py  rbac.py  service.py  sso.py
daari/gateway/: anthropic.py  base.py  content.py  guardrails.py  internal.py  mcp.py  ollama_compat.py  openai.py  pii.py  request_log.py  responses.py
daari/learning/: __init__.py  collective.py  dataset.py  deploy.py  examples.py  feedback.py  finetune.py  recommend.py  router_model.py  tuner.py
daari/observability/: metrics.py  otel.py  postgres_trace.py  postgres_usage.py  prometheus.py  render.py  trace.py  usage.py
daari/policy/: __init__.py  engine.py
daari/providers/: base.py  integrations.py  live_sources.py  mcp_egress.py  registry.py
daari/router/: capabilities.py  circuit_breaker.py  compress.py  confidence.py  context_optimizer.py  frontier.py  frontier_pool.py  mlx_executor.py  model_profile.py  profile.py  router.py
daari/rules/: __init__.py  dev_commands.py  engine.py
daari/server/: app.py  auth.py
daari/setup/: __init__.py  backup.py  context.py  doctor.py  jsonc.py  models.py  openai_compat.py  tunnel.py  wizard.py
daari/tools/: __init__.py  shell.py
deploy/grafana/: daari-dashboard.json
docs/: ARCHITECTURE.md  AUTOMATION.md  BENCHMARKS.md  DEVELOPING.md  PRD-PLAN.md  README.md  RELEASE-v1.0.md  RELEASE-v1.1.1.md  RELEASE-v1.1.2-cursor-e2e.md  RELEASE-v1.1.md  RELEASE-v1.2.0.md  RELEASING.md  TRACKING.md  VALIDATION.md
docs/adr/: 0001-frontier-fallback-policy.md  0002-openai-compatible-api.md  0003-tool-native-tier.md  0004-agent-tool-call-compatibility.md  0005-python-tech-stack.md  0006-local-daemon-security.md  0007-pluggable-gateway-adapters.md  0008-developer-command-rules-and-context-cache.md  0009-live-factual-fetch-l2-live.md  0010-browser-bridge-google-search.md  0011-pluggable-integration-providers.md  0012-execution-policy.md  0013-monorepo-structure.md  0014-enterprise-distributed-org-learning.md  README.md
docs/automations/: dev-cycle.md  pr-review.md  scout.md
docs/discovery/: 00-kickoff.md  01-vision.md  02-discovery.md  03-approach-options.md  04-competitive-landscape.md
docs/plans/: phase-a.md
docs/prd/: PLAN-REVIEW.md  PRD.md  README.md  ROADMAP-v2.md  ROADMAP.md  enterprise.md  glossary.md  integrations.md  intelligence.md  learning.md  routing-spec.md  setup-spec.md  sources-integration.md  trust.md
docs/reference/: api.md  config.md
docs/setup/: capacity.md  claude-code.md  cursor.md  homebrew.md  intellij.md  mlx.md  openai-compat.md  project-profiles.md  sources.yaml.example  vscode.md
evals/routing/: prompts.jsonl
scripts/: autodev-local.sh  bench.sh  demo.sh  gen_reference.py  install.sh  measure_phase_b_metrics.py  smoke-cursor-dry-run.sh  tunnel.sh
scripts/launchd/: com.daari.autodev.plist  com.daari.serve.plist
site/: 404.html  index.html  sitemap.xml
site/ARCHITECTURE/: index.html
site/AUTOMATION/: index.html
site/DEVELOPING/: index.html
site/PRD-PLAN/: index.html
site/RELEASE-v1.0/: index.html
site/RELEASE-v1.1/: index.html
site/RELEASE-v1.1.1/: index.html
site/RELEASE-v1.1.2-cursor-e2e/: index.html
site/RELEASE-v1.2.0/: index.html
site/TRACKING/: index.html
site/VALIDATION/: index.html
site/adr/: index.html
site/prd/: index.html
site/search/: search_index.json
tests/: conftest.py  test_doctor.py  test_phase_a.py  test_routing_eval.py  test_setup.py
tests/benchmark/: test_tier_latency.py
tests/integration/: test_anthropic_tools.py  test_gateway_auth.py  test_gateway_flow.py  test_l1_semantic_cache.py  test_l6_escalation.py  test_ollama_compat.py  test_ollama_live.py  (+3 more)
(+116 files in other folders)
