[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daari"
version = "0.1.0"
description = "Local-first execution router — cache before cloud"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "diskcache>=5.6",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
daari = "daari.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["daari"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: live Ollama or external deps (requires OLLAMA_HOST)",
  "benchmark: optional latency tier comparisons",
]

[tool.ruff]
line-length = 100
target-version = "py312"
